--- a/src/app/componentes/barraub/barraub.component.html
+++ b/src/app/componentes/barraub/barraub.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-dark">
-  <span class="navbar-brand mb-0 h1">Ub1c4c0N?xy</span>
+  <span class="navbar-brand mb-0 h1">{{ubicacion}}</span>
 </nav>
