--- a/src/app/paginas/inicio/body/body.component.html
+++ b/src/app/paginas/inicio/body/body.component.html
@@ -1,3 +1,9 @@
-<p>
-  body inicio works!
-</p>
+<div class="col-sm-12">
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <app-card></app-card>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+</div>
