--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--Barra de presentacion de la pantalla-->
-<app-barraub [nubicacion]="nubicacion"></app-barraub>
+<app-barraub></app-barraub>
 
 <!--Body-->
 <div class="col-sm-12 row">
