--- a/src/app/componentes/navbar/navbar.component.css
+++ b/src/app/componentes/navbar/navbar.component.css
@@ -3,7 +3,9 @@ ul {
     margin: 0;
     padding: 0;
     width: 120%;
-    background-color: #f1f1f1;
+    /*background-color: #f1f1f1;*/
+    /*background-color: #2C95F9;*/
+    background-color: #3B698F;
     height: 174%;
 }
 
