--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -3,6 +3,9 @@
       <a [routerLink]="['Inicio']"><h4>Inicio</h4></a>
     </li>
     <li>
+      <a [routerLink]="['Almacen']"><h4>Almacen</h4></a>
+    </li>
+    <li>
       <a [routerLink]="['Comandas']"><h4>Comandas</h4></a>
     </li>
     <li>
